# TGFilesystemMonitor

./: .env.example  .gitignore  README.md  pyproject.toml
tgfilesystemmonitor/: __about__.py  config.py  local.py  log.py  main.py  tgfsm.py
