[tool.poetry]
name = "tgfilesystemmonitor"
version = "0.1.0"
description = "A script that monitors file system events and sends a report via Telegram (Available only on Unix-like systems)."
authors = ["Loureas (Pavel Piskursky)"]
readme = "README.md"
exclude = [
    "__pycache__/",
    "*.py[cod]",
]

[tool.poetry.dependencies]
python = "^3.11"
environs = "^10.0.0"
loguru = "^0.7.2"
arrow = "^1.3.0"
watchdog = "^3.0.0"
aiogram = { git = "https://github.com/aiogram/aiogram.git" }
uvloop = "^0.19.0"
ujson = "^5.9.0"
aiohttp = { version = "^3.9.1", extras = [ "speedups" ] }

[tool.poetry.group.dev.dependencies]
pynvim = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

